can create groups

--- a/templates/about/author.html
+++ b/templates/about/author.html
@@ -17,7 +17,7 @@
               </li>
               <li class="list-group-item">
                 <div class="h6 text-muted">
-                  Полезный короткий текст
+                  Проект написал
                 </div>
               </li>
             </ul>
@@ -28,7 +28,7 @@
       <div class="col-md-9">
         <div class="card-body">
           <div class="card-text">
-            <p>Текст страницы "Об авторе"</p>
+            <p>Работу выполнил Большагин Вячеслав, 11в</p>
           </div>
         </div>
       </div>
