--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,6 +6,7 @@
         <a class="p-2 text-dark" href="{% url 'password_change' %}">Изменить пароль</a>
         <a class="p-2 text-dark" href="{% url 'logout' %}">Выйти</a>
         <a class="p-2 text-dark" href="{% url 'new_post' %}">Создать желание</a>
+        <!-- <a class="p-2 text-dark" href="{% url 'new_group' %}">Создать праздник</a> -->
         {% else %}
         <a class="p-2 text-dark" href="{% url 'login' %}">Войти</a> |
         <a class="p-2 text-dark" href="{% url 'signup' %}">Регистрация</a>
