--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -1,42 +1,39 @@
-{%  extends "base.html" %}
-{% block title %}О технологиях{% endblock %}
+{% extends "base.html" %}
+{% block title %}Об авторе проекта{% endblock %}
 {% block content %}
 {% load user_filters %}
-{% if page.has_other_pages %}
-    <nav>
-        <ul class="pagination">
-            {% if page.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page.previous_page_number }}">&laquo; Предыдущая</a>
-                </li>
-            {% else %}
-                <li class="page-item disabled">
-                    <span class="page-link">&laquo; Предыдущая</span>
-                </li>
-            {% endif %}
-            {% for i in page.paginator.page_range %}
-                {% if page.number == i %}
-                    <li class="page-item active">
-      <span class="page-link">{{ i }}
-        <span class="sr-only">(текущая)</span>
-      </span>
-                    </li>
-                {% else %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                    </li>
-                {% endif %}
-            {% endfor %}
-            {% if page.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page.next_page_number }}">Следующая &raquo;</a>
-                </li>
-            {% else %}
-                <li class="page-item disabled">
-                    <span class="page-link">Следующая &raquo;</span>
-                </li>
-            {% endif %}
-        </ul>
-    </nav>
-{% endif %}
+  <main role="main" class="container">
+    <div class="row">
+      <!-- Левый вспомогательный блок -->
+      <div class="col-md-3 mb-3 mt-1">
+        <div class="card">
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <div class="h3">
+                  Технологии
+                </div>
+              </li>
+              <li class="list-group-item">
+                <div class="h6 text-muted">
+
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Тело страницы -->
+      <div class="col-md-9">
+        <div class="card-body">
+          <div class="card-text">
+            <p>В проекте использованы:<br />
+            Python 3.9<br />Django<br />Whitenoise<br /><br />Host:<br />Heroku
+
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 {% endblock %}
